# iJVM-Interpreter-RS

./: .gitignore  Cargo.toml  compile.sh
ijvm_cpp_wrapper/: Cargo.toml
ijvm_cpp_wrapper/src/: lib.rs
ijvm_inspector/: .gitignore  ijvm_inspector.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
ijvm_inspector/.qtc_clangd/: compile_commands.json
ijvm_inspector/.qtc_clangd/.cache/clangd/index/: QApplication.E32C34470E73AF3C.idx  QLocale.7B12568337A76DA2.idx  QMainWindow.DCACA2D61D90650D.idx  QTranslator.F6ECDE910B102FE3.idx  __stddef_max_align_t.h.9D297D2FBA0C7539.idx  align.h.511A3F58D1239E55.idx  alloc_traits.h.DE99E4A907B8EC89.idx  alloca.h.B3C3404035C15EA6.idx  array.DDD6521D8D34FB73.idx  atomic_base.h.6C9672ECCD17C251.idx  auto_ptr.h.80B7C5BD406B2F78.idx  basic_string.h.4FA5E761D595F3D8.idx  cmath.EBD54900AD6D9FC5.idx  cstddef.AE9768E7863E42DA.idx  cstdint.CED58966CDFA7386.idx  cstring.87FA5FDC439997A0.idx  limits.h.D19112D4B7FE4902.idx  (+156 more)
ijvm_interpreter_rs/: .directory  Cargo.toml
ijvm_interpreter_rs/resources/: esempioGOTO.ijvm  esempioMetodo.ijvm
ijvm_interpreter_rs/src/: ijvm.rs  lib.rs
ijvm_interpreter_rs/src/ijvm/: method_area.rs
ijvm_interpreter_rs/tests/: t_ijvm.rs
ijvm_step_viewer/: .gitignore  CMakeLists.txt  main.cpp
ijvm_step_viewer/layout/: mainwindow.ui
ijvm_step_viewer/src/: mainwindow.cpp
resources/: README.md
src/: ijvm.rs  lib.rs  main.rs  parser.rs
src/ijvm/: execute_istr.rs  method_area.rs  parser.rs
src/parser/: istruction_reader.rs
src/parser/istruction_reader/: istruction.rs
tests/: commons.rs  t_ijvm.rs
(+1 files in other folders)
